# rust_pokemon_api

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs  pokemon.rs
src/db/: setup.rs
src/lib/: mod.rs
src/models/: error.rs  mod.rs  pokemon.rs
src/routes/: mod.rs  pokemon.rs
src/services/: pokemon.rs
