[package]
name = "axum-api-base"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.6"
axum-macros = "0.4.2"
diesel = { version = "2.2.4" , features= ["postgres", "r2d2"] }
dotenvy = "0.15.7"
reqwest =  { version = "0.12.7" ,features = ["json"] }
serde = { version = "1.0.210" , features = ["derive"]}
serde_json = "1.0.128"
tokio = {version = "1.40.0", features = ["full"]}
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
